# IVenn

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: 4set_dataset.xlsx  5set_dataset.xlsx  6set_dataset.xlsx  banana_dataset.xlsx
examples/: define_sets.py  load_sets.py
src/ivenn/: __init__.py
src/ivenn/core/: __init__.py  api.py  models.py  themes.py
src/ivenn/gui/: __init__.py  launcher.py  viewer.py
tests/: unit_test.py
